opam-version: "2.0"
synopsis: "Self-describing Hash Functions"
description:
  "This library provides self-describing hash functions without any implementation"
maintainer: ["patrick@sirref.org"]
authors: ["patrick@sirref.org"]
license: "MIT"
homepage: "https://github.com/patricoferris/ocaml-multihash"
bug-reports: "https://github.com/patricoferris/ocaml-multihash/issues"
depends: [
  "dune" {>= "2.9"}
  "alcotest" {with-test}
  "mdx" {with-test}
  "multicodec"
  "cstruct"
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
dev-repo: "git+https://github.com/patricoferris/ocaml-multihash.git"
pin-depends:[
  [ "multicodec.dev" "git+https://github.com/patricoferris/ocaml-multicodec#cba0694076db6277833b26000f1ffa068a2cb4ce" ]
]
